--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-07-27T14:43:29.236Z",
-        "lastAccessed": "2024-07-27T14:43:29.236Z"
+        "creation": "2024-07-27T17:16:31.507Z",
+        "lastAccessed": "2024-07-27T17:16:31.507Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-27T14:43:29.236Z",
-        "lastAccessed": "2024-07-27T14:43:29.236Z"
+        "creation": "2024-07-27T17:16:31.507Z",
+        "lastAccessed": "2024-07-27T17:16:31.507Z"
     },
     {
         "key": "datr",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-27T14:43:29.236Z",
-        "lastAccessed": "2024-07-27T14:43:29.236Z"
+        "creation": "2024-07-27T17:16:31.507Z",
+        "lastAccessed": "2024-07-27T17:16:31.507Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-27T14:43:29.236Z",
-        "lastAccessed": "2024-07-27T14:43:29.236Z"
+        "creation": "2024-07-27T17:16:31.507Z",
+        "lastAccessed": "2024-07-27T17:16:31.507Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-27T14:43:29.236Z",
-        "lastAccessed": "2024-07-27T14:43:29.236Z"
+        "creation": "2024-07-27T17:16:31.507Z",
+        "lastAccessed": "2024-07-27T17:16:31.507Z"
     },
     {
         "key": "dpr",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-27T14:43:29.236Z",
-        "lastAccessed": "2024-07-27T14:43:29.236Z"
+        "creation": "2024-07-27T17:16:31.507Z",
+        "lastAccessed": "2024-07-27T17:16:31.507Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-27T14:43:29.236Z",
-        "lastAccessed": "2024-07-27T14:43:29.236Z"
+        "creation": "2024-07-27T17:16:31.507Z",
+        "lastAccessed": "2024-07-27T17:16:31.507Z"
     },
     {
         "key": "locale",
@@ -68,35 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-27T14:43:29.236Z",
-        "lastAccessed": "2024-07-27T14:43:29.236Z"
-    },
-    {
-        "key": "c_user",
-        "value": "100090419983169",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-27T14:43:29.236Z",
-        "lastAccessed": "2024-07-27T14:43:29.236Z"
-    },
-    {
-        "key": "xs",
-        "value": "45%3AEGYay88Obiy9GA%3A2%3A1722091109%3A-1%3A5903",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-27T14:43:29.236Z",
-        "lastAccessed": "2024-07-27T14:43:29.236Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101327248%3BT%3A28701518",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-27T14:43:29.236Z",
-        "lastAccessed": "2024-07-27T14:43:29.236Z"
+        "creation": "2024-07-27T17:16:31.507Z",
+        "lastAccessed": "2024-07-27T17:16:31.507Z"
     },
     {
         "key": "wl_cbv",
@@ -104,8 +77,44 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-27T14:43:29.236Z",
-        "lastAccessed": "2024-07-27T14:43:29.236Z"
+        "creation": "2024-07-27T17:16:31.507Z",
+        "lastAccessed": "2024-07-27T17:16:31.507Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100090419983169",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-27T17:16:31.507Z",
+        "lastAccessed": "2024-07-27T17:16:31.507Z"
+    },
+    {
+        "key": "xs",
+        "value": "18%3AS8UBx2ySJ7ZfBQ%3A2%3A1722100568%3A-1%3A5903",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-27T17:16:31.507Z",
+        "lastAccessed": "2024-07-27T17:16:31.507Z"
+    },
+    {
+        "key": "fr",
+        "value": "18M6uZ6LTo58LMCnq.AWVbqgdx7aSRbY5Zxhx1MOJbHEk.Bmm-zX..AAA.0.0.BmpSta.AWUGpf34SMY",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-27T17:16:31.507Z",
+        "lastAccessed": "2024-07-27T17:16:31.507Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1722100581507%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-27T17:16:31.507Z",
+        "lastAccessed": "2024-07-27T17:16:31.507Z"
     },
     {
         "key": "wd",
@@ -113,25 +122,7 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-27T14:43:29.236Z",
-        "lastAccessed": "2024-07-27T14:43:29.236Z"
-    },
-    {
-        "key": "fr",
-        "value": "18M6uZ6LTo58LMCnq.AWUHUjkJnvBxUa2TtTzqPO-Ll3g.Bmm-zX..AAA.0.0.BmpQeD.AWXgguqasYU",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-27T14:43:29.236Z",
-        "lastAccessed": "2024-07-27T14:43:29.236Z"
-    },
-    {
-        "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1722091401448%2C%22v%22%3A1%7D",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-27T14:43:29.236Z",
-        "lastAccessed": "2024-07-27T14:43:29.236Z"
+        "creation": "2024-07-27T17:16:31.507Z",
+        "lastAccessed": "2024-07-27T17:16:31.507Z"
     }
 ]
