--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "〖 # 〗 ➺ 🌸🥀ɢ❍ɭ ɢʌʌ𝐩🅘🕊️",
+    "BOTNAME": "〖 . 〗 ➺ 🌸🕊️ɭʌɗɗ𝖚🥀ɮ❍┼🕊️",
     "PREFIX": ".",
     "OTHERBOT": [
         ""
